2004-08-18  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* lily/clef-engraver.cc: Add forceClef to list of read properties.

2004-07-30  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/changing-defaults.itely (Horizontal spacing): 
	Correct the documentation of the spacing parameters. 

2004-07-14  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/lyric-engraver.cc: mention LyricText

2004-07-13  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/translation-functions.scm (format-metronome-markup): backport.

	* scm/define-markup-commands.scm (general-align): add  function.

2004-07-09  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/axis-group-engraver.cc (process_acknowledged_grobs):
	backport.

2004-07-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* ChangeLog: Remove pre-2.1 changes.

	* Documentation/misc/ChangeLog-2.1: New file.

2004-07-05  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* input/test/chords-below-volta-bracket.ly,
	input/test/no-key-at-end-of-line.ly: New example files (FAQs)

2004-07-05  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/beam-quanting.cc (score_forbidden_quants): backport, more
	leniency to make sit (upstem) on outer line not be forbidden.

2004-07-04  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION: release 2.2.4
	
	* ly/engraver-init.ly: add Volta_engraver.

	* debian/GNUmakefile (EXTRA_DIST_FILES): remove lilypond.dirs.

	* scripts/lilypond-book.py (Lilypond_snippet.output_texinfo): add
	\n to texidoc.

	* input/test/volta-chord-names.ly: new file.

	* lily/volta-bracket.cc (print): handle no bars situation. 

	* lily/volta-engraver.cc (staff_eligible): backport. Always
	use voltaOnThisStaff as override.
	(stop_translation_timestep): backport: set bounds. 

	* scm/define-grobs.scm (all-grob-descriptions): backport (0 . 0)
	fix for clef-8.

2004-07-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/abc2ly.py: Backport.

2004-06-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* debian/: Apply Debian patch (Anthony Fok).
